# 64cam

./: .env.example  .env.node.example  .env.single.example  .gitignore  Cargo.toml  docker-compose.node.yml  docker-compose.single.yml  docker-compose.yml
.github/workflows/: migrations.yml  mobile.yml  release.yml
common/: Cargo.toml
common/src/: auth.rs  db.rs  lib.rs  ws.rs
common/src/models/: camera.rs  mod.rs  node.rs  retention.rs  role.rs  user.rs
coordinator/: Cargo.toml
coordinator/src/: error.rs  lib.rs  main.rs  openapi.rs  retention.rs  state.rs  storage.rs
coordinator/src/middleware/: auth.rs
coordinator/src/routes/: auth.rs  cameras.rs  dashboard_ws.rs  events.rs  mod.rs  node_ws.rs  nodes.rs  playback.rs  retention.rs  users.rs  whep.rs
coordinator/tests/: helpers.rs  test_auth.rs  test_cameras.rs  test_nodes.rs  test_recordings.rs  test_users.rs
docker/caddy/: Caddyfile
docker/coordinator/: Dockerfile
docker/migrate/: Dockerfile
docker/node/: Dockerfile
docker/postgres/: Dockerfile
docs/: deployment.md  limitations.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CameraCell.module.css  CameraCell.tsx  CameraGrid.module.css  CameraGrid.tsx  EventFeed.module.css  EventFeed.tsx  NodeBar.module.css  NodeBar.tsx  Timeline.module.css  Timeline.tsx  WHEPPlayer.module.css  WHEPPlayer.tsx
frontend/src/hooks/: useStatusWs.ts  useWHEP.ts
frontend/src/pages/: Dashboard.module.css  Dashboard.tsx  Login.module.css  Login.tsx  Playback.module.css  Playback.tsx
frontend/src/store/: auth.ts
migrations/: 0001_extensions.sql  0002_roles.sql  0003_users.sql  0004_sessions.sql  0005_nodes.sql  0006_cameras.sql  0007_retention_policies.sql  0008_recordings.sql  0009_events.sql  0010_bootstrap.sql  0011_partman_setup.sql  0012_camera_retention.sql  0013_recordings_id_index.sql  0014_camera_onvif.sql
mobile/: analysis_options.yaml  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/lib/: app.dart  main.dart
mobile/lib/src/api/: client.dart
mobile/lib/src/core/: theme.dart
mobile/lib/src/models/: models.dart
mobile/lib/src/providers/: providers.dart
mobile/lib/src/screens/: camera_list_screen.dart  events_screen.dart  home_screen.dart  live_view_screen.dart  login_screen.dart  playback_screen.dart
mobile/lib/src/state/: auth_state.dart  dashboard_state.dart
mobile/lib/src/widgets/: camera_card.dart  event_tile.dart
node/: Cargo.toml
node/src/: config.rs  hardware.rs  identity.rs  main.rs  playback.rs  registration.rs  ws_client.rs
node/src/events/: diff.rs  mod.rs  onvif.rs
node/src/mediamtx/: config.rs  mod.rs
node/src/recorder/: mod.rs  queue.rs  watchdog.rs
node/src/storage/: mod.rs  sigv4.rs
seeds/: dev_fixtures.sql
