[workspace]
members  = ["common", "coordinator", "node"]
resolver = "2"

[workspace.dependencies]
sqlx               = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio              = { version = "1", features = ["full"] }
uuid               = { version = "1", features = ["v4", "v5", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum               = { version = "0.7", features = ["macros", "ws"] }
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace", "fs"] }
jsonwebtoken       = "9"
argon2             = "0.5"
rand               = "0.8"
sha2               = "0.10"
hex                = "0.4"
thiserror          = "1"
utoipa             = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui  = { version = "7", features = ["axum"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
hmac               = "0.12"
