[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx         = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
jsonwebtoken = { workspace = true }
argon2       = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
thiserror    = { workspace = true }
utoipa       = { workspace = true }
