[package]
name    = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
common             = { path = "../common" }
tokio              = { workspace = true }
anyhow             = { workspace = true }
dotenvy            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
reqwest            = { workspace = true }
futures-util       = "0.3"
tokio-tungstenite  = "0.24"
sysinfo            = "0.31"
directories        = "5"
hostname           = "0.4"
axum               = { workspace = true }
tower-http         = { workspace = true }
tokio-util         = { version = "0.7", features = ["io"] }
notify             = "6"
walkdir            = "2"
hmac               = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
